# components

./: .gitignore  README.md
edufill_sw/: .gitignore  repository.debs  repository.debs~  repository.rosinstall  stack.xml  (+1 more)
edufill_sw/edufill_perception/edufill_object_detection/: CMakeLists.txt  calc_detect_perf.py  detect_perf.txt  detect_perf_results.txt  mainpage.dox  manifest.xml  test_blue.sh  test_detection.sh  test_detector.sh
edufill_sw/edufill_perception/edufill_object_detection/data/: green_cub.png_minmax  yellow_cub.png_hsv_minmax
edufill_sw/edufill_perception/edufill_object_detection/histograms/: blue_cube.hst  cyan_cube.hst  green_cube.hst  magenta_cube.hst  red_cube.hst  yellow_cube.hst
edufill_sw/edufill_perception/edufill_object_detection/launch/: calibrate_color.launch  cube_color_detector.launch  openni.launch
edufill_sw/edufill_perception/edufill_object_detection/params/: cur_min_max_hsv.yaml  def_min_max_hsv.yaml  min_max_hsv.yaml  min_max_hsv_c069.yaml  params.yaml
edufill_sw/edufill_perception/edufill_object_detection/ros/include/: object_segmentation.h
edufill_sw/edufill_perception/edufill_object_detection/ros/launch/: object_segmentation.launch
edufill_sw/edufill_perception/edufill_object_detection/ros/src/: object_segmentation.cpp
edufill_sw/edufill_perception/edufill_object_detection/scripts/: calibrate_color.py  cube_color_detector.py  get_images_from_kinect.sh  histogram.py  myutils.py  myutils_io.py  point_cloud2.py
edufill_sw/edufill_perception/edufill_object_detection/scripts/component/: detect_cube.py
edufill_sw/edufill_perception/edufill_object_detection/srv/: DetectCube.srv
edufill_sw/edufill_perception/edufill_object_detection/srv_gen/lisp/: DetectCube.lisp  _package.lisp  _package_DetectCube.lisp  edufill_object_detection-srv.asd
(+595 files in other folders)
